<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Language_app</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name_app">Pic A Word</string>
    <string name="title_activity_choose_level">ChooseLevel</string>
    <string name="title_activity_drawing_canvas">DrawingCanvas</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Eraser</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="title_activity_lessons">Lessons</string>
    <string name="title_activity_flashcards">Flashcards</string>

</resources>
